# exercici3_1

./: CMakeLists.txt  README.md  package.xml
launch/: exercise3_1.launch
urdf/: integracio_arm.urdf
