<?xml version="1.0"?>
<package format="2">
  <name>integracio3_1</name>
  <version>0.0.1</version>
  <description>L'exercici de l'unitat 3 d'integració'</description>

  <maintainer email="mpuig22@gmail.com">Miquel Puig</maintainer>

  <url type="website">https://github.com/miquipuig</url>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
